<resources>
    <string name="app_name">Matchinii</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat_password</string>
    <string name="mustNotBeEmpty"> this fiels must not be empty</string>
    <string name="next">next</string>
    <string name="go_to_sign_up">go to sign Up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="checkYourEmail">Check your email !</string>
    <string name="login">LOGIN</string>
    <string name="save">Save</string>
    <string name="repeat_password1">repeat password</string>
    <string name="new_password">new password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_password">enter password</string>
    <string name="repeat_password2">repeat password</string>
    <string name="remember_me">Remember me</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="logout">Logout</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="messages">messages</string>
    <string name="todo">TODO</string>
    <string name="hint">hint</string>
    <string name="hint1">hint</string>
    <string name="hint3">hint</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_age">Your Age</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="todoh">TODO</string>
    <string name="tododo">TODO</string>
    <string name="saveyo">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="todohohoh">TODO</string>
    <string name="your_age1">Your Age</string>
    <string name="your_name">Your Name</string>
    <string name="ancient_password">ancient password</string>
    <string name="new_password1">new password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrer_le_code">Entrer le code</string>
    <string name="entrer_le_code1">entrer le code</string>
    <string name="mail_verification">Mail Verification</string>
    <string name="repeat_password3">repeat password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="todooo">TODO</string>
    <string name="textviewww">TextView</string>
    <string name="textviewwwwww">TextView</string>
    <string name="textviewwwww">TextView</string>
    <string name="textvieww">TextView</string>
    <string name="todooooooo">TODO</string>
    <string name="textviewzlokijhgv">TextView</string>
    <string name="todooooooooo">TODO</string>
    <string name="todojj">TODO</string>
    <string name="show_me">Show Me</string>
    <string name="_20_km">20 Km</string>
    <string name="log_out">LOG OUT</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="licenses">Licenses</string>
    <string name="legal">Legal</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="_50_14">50-14</string>
    <string name="logoutset">Logout</string>
    <string name="purchase">Purchase</string>
    <string name="notification">Notification</string>
    <string name="todoopijhugjkhvj">TODO</string>
    <string name="user_imageitem">user_image</string>
    <string name="chats">Chats</string>

</resources>