<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="342dp"
        android:layout_height="652dp"
        android:animationCache="true"
        app:barrierMargin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cardimage"
            android:layout_width="311dp"
            android:layout_height="620dp"
            android:contentDescription="@string/todooo"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="460dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="303dp"
                android:layout_height="115dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="6dp"
                android:text="@string/textviewwwww"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#EC8002"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="605dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="157dp"
                android:contentDescription="@string/todooooooo"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/avd_anim" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>