<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.EditProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="421dp"
        android:layout_height="532dp"
        android:layout_marginTop="199dp"
        android:orientation="vertical"
        app:boxStrokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutFirstName"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="#5EF67970"

            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="#CEEC766D"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_baseline_person_24_white"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_person_24_white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColorHighlight="#CEEC766D"
                android:textColorHint="#000000"
                android:textColorLink="#CEEC766D"
                android:textSize="20sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutLastName"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="#5EF67970"

            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="#CEEC766D"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_baseline_person_24_white"
            app:hintTextColor="#000000"

            app:startIconDrawable="@drawable/ic_baseline_person_24_white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="#000000"
                android:textColorHighlight="#CEEC766D"
                android:textColorLink="#CEEC766D"
                android:textSize="20sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutAge"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"


            app:boxBackgroundColor="#5EF67970"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="#CEEC766D"
            app:boxStrokeWidth="0dp"

            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_baseline_date_range_24"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_age"
                android:inputType="number"
                android:textColorHighlight="#CEEC766D"
                android:textColorHint="#000000"
                android:textColorLink="#CEEC766D"
                android:textSize="20sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutNumber"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"

            app:boxBackgroundColor="#5EF67970"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="#CEEC766D"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_baseline_local_phone_24"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_phone_number"
                android:inputType="phone"
                android:textColorHighlight="#CEEC766D"
                android:textColorHint="#000000"
                android:textColorLink="#CEEC766D"
                android:textSize="20sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/Male"
                    android:layout_width="76dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/todoh"
                    app:srcCompat="@drawable/avatar"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/tododo"
                    app:srcCompat="@drawable/female"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Save"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:backgroundTint="#57E53E5E"
                android:shadowRadius="30"
                android:text="@string/saveyo"
                android:textColor="#000000"
                app:circularflow_defaultRadius="30dp"
                app:circularflow_radiusInDP="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />
</androidx.constraintlayout.widget.ConstraintLayout>