<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecondActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="147dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FF5252"
            android:textColorLink="#FFD2B6"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="421dp"
            android:layout_height="334dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">

            <LinearLayout
                android:id="@+id/linearLayoutEmail"
                android:layout_width="320dp"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="47dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:hint="@string/email"
                    android:textColorHighlight="#CEEC766D"
                    android:textColorLink="#CEEC766D"
                    app:boxBackgroundColor="#5EF67970"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditEmail"
                        android:layout_width="296dp"
                        android:layout_height="62dp"
                        android:textColorHighlight="#CEEC766D"
                        android:textColorLink="#CEEC766D"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/black"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPassword"
                android:layout_width="320dp"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_marginEnd="42dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutReset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LayoutPassword"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:hint="@string/password"
                    android:textColorHighlight="#CEEC766D"
                    android:textColorLink="#CEEC766D"
                    app:boxBackgroundColor="#5EF67970"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconCheckable="false"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/black"

                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditPassword"
                        android:layout_width="296dp"
                        android:layout_height="62dp"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/black"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutReset"
                android:layout_width="320dp"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="48dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LayoutRestPassword"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColorHighlight="#CEEC766D"
                    android:textColorLink="#CEEC766D"
                    app:boxBackgroundColor="#5EF67970"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconCheckable="true"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditRestPassword"
                        android:layout_width="296dp"
                        android:layout_height="62dp"
                        android:layout_marginStart="8dp"
                        android:hint="@string/repeat_password2"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="#F0ECF1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/black"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/nextbtn"
            android:layout_width="272dp"
            android:layout_height="55dp"

            android:layout_marginStart="70dp"
            android:layout_marginTop="25dp"

            android:layout_marginEnd="69dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="#57E53E5E"
            android:text="@string/next"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="406dp"
        android:layout_height="182dp"
        android:layout_marginTop="550dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>